# AxumPostgresAPI

./: Cargo.toml  README.md
src/: db.rs  main.rs
src/models/: user.rs
src/routes/: mod.rs  user.rs
