[package]
name = "back_axum_0_1"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1.3", features = ["server", "tokio"] } 
tower = "0.4"
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "runtime-tokio-rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["trace"] }
